# agenix-rekey

./: .gitignore  README.md  flake.nix
app/: Cargo.toml
app/crates/cli/: Cargo.toml
app/crates/cli/src/: config.rs  main.rs  status.rs
app/crates/cli/src/commands/: generate.rs  mod.rs  rekey.rs
app/crates/cli/tests/: integration_test.rs
app/crates/lib/: Cargo.toml
app/crates/lib/src/: identity.rs  lib.rs  logging.rs  manifest.rs
apps/: generate.nix  manifest.nix  rekey.nix  rust-generate.nix  rust-rekey.nix
docs/: generator-settings.md  roadmap.md
generators/: echo.nix
modules/: agenix-rekey.nix
nix/: lib.nix  output-derivation.nix
tests/: settings-module.nix
tests/lib/: agenix-stub.nix
