[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Logan Barnett <logustus@gmail.com>"]
license = "MIT"
repository = "https://github.com/LoganBarnett/agenix-rekey"

[workspace.dependencies]
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Utilities
# tap - Enables method chaining and reduces superfluous local variables
# that only exist to name intermediate results. Prefer .tap() over temporary
# variables when it improves readability.
tap = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# age encryption (armor = ASCII armor; ssh = SSH recipient/identity key support)
age = { version = "0.11", features = ["armor", "ssh"] }

# Passphrase prompting (used when loading passphrase-protected identity files)
rpassword = "7"

# Secret string wrapper – keeps passphrases out of debug output and prevents
# accidental logging.  Re-exported by the age crate but we depend on it
# directly so the type is available without going through age.
secrecy = "0.10"

# Temporary directories for dep decryption staging
tempfile = "3"

# Hashing (for rekey ident hash computation)
sha2 = "0.10"

# POSIX system calls (ttyname, isatty — for passphrase terminal detection)
libc = "0.2"

# Terminal colors
owo-colors = { version = "4", features = ["supports-colors"] }

# Shared library
ragenix-rekey-lib = { path = "crates/lib" }
