[package]
name = "ragenix-rekey"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ragenix-rekey"
path = "src/main.rs"

[dependencies]
ragenix-rekey-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
age = { workspace = true }
tempfile = { workspace = true }
