[package]
name = "ragenix-rekey-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
age = { workspace = true }
rpassword = { workspace = true }
secrecy = { workspace = true }

